Objects can't be deleted from scene when using "link group objects to scene" #50369

Closed
opened 2017-01-03 23:15:54 +01:00 by Daniel Bystedt · 4 comments
Member

System Information
Operating system and graphics card
windows 7
NVIDIA GeForce GTX 660

Blender Version
Broken: 3d243eb
Worked: same error on offical release 2.78

Short description of error
When first linking a group to a scene and then right clicking in outliner on group and choosing "link group objects to scene", the resulting objects can not be deleted from the scene.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. link a GROUP from another blend file into your current scene.
  2. right click in outliner on the group and choose "link group objects to scene"
  3. They resulting objects can NOT be deleted.

Error message
Cannot delete object 'Suzanne' from scene 'Scene', indirectly used objects need at least one user

There is a hack to be able to delete the objects, which is the following

  1. select all objects and "make proxy" ctrl+alt+p
  2. press F6 and press "default" on the UI
  3. Objects can now be deleted

RAR with 2 blend files attached. Open errorShownInThisFile.blend in order to see the error
blenderLinkError.rar

**System Information** Operating system and graphics card windows 7 NVIDIA GeForce GTX 660 **Blender Version** Broken: 3d243eb Worked: same error on offical release 2.78 **Short description of error** When first linking a group to a scene and then right clicking in outliner on group and choosing "link group objects to scene", the resulting objects can not be deleted from the scene. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. link a GROUP from another blend file into your current scene. 2. right click in outliner on the group and choose "link group objects to scene" 3. They resulting objects can NOT be deleted. Error message Cannot delete object 'Suzanne' from scene 'Scene', indirectly used objects need at least one user There is a hack to be able to delete the objects, which is the following 1. select all objects and "make proxy" ctrl+alt+p 2. press F6 and press "default" on the UI 3. Objects can now be deleted RAR with 2 blend files attached. Open errorShownInThisFile.blend in order to see the error [blenderLinkError.rar](https://archive.blender.org/developer/F427122/blenderLinkError.rar)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt

This issue was referenced by 351a9d084f

This issue was referenced by 351a9d084f59a6d11be9148830cec86eacb85529

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2017-01-04 10:30:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50369
No description provided.